--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body style=" margin-right: 0px !important;
   margin-left: 0px !important;;">
 
-    <div class="div1 colorA">Clases del Profesor RamzonyDk - no te lo pierdasxd</div>
+    <div class="div1 colorA">Programado por Ramiro Flores</div>
     <div class="div1 colorNN">
         <p id="pe">Estás viendo CE, CEE, y la regla de diagonales </p>
 
